[package]
name = "croncat-app"
version = "0.0.1"
authors = [
  "CyberHoward <cyberhoward@protonmail.com>",
  "Adair <adair@abstract.money>",
  "Abstract Money <contact@abstract.money>",
]
edition = "2021"
homepage = ""
documentation = ""
repository = ""
license = "GPL-3.0-or-later"
keywords = ["cosmos", "cosmwasm", "abstractsdk"]

# Enable the version 2 feature resolver, which avoids unifying features for targets that are not being built
#
# Critically this prevents dev-dependencies from enabling features even when not building a target that
# uses dev-dependencies, e.g. the library crate. This in turn ensures that we can catch invalid feature
# flag combinations that would otherwise only surface in dependent crates
#
# Reference - https://doc.rust-lang.org/nightly/cargo/reference/features.html#feature-resolver-version-2
# See - https://github.com/apache/arrow-rs/pull/1822/files
resolver = "2"

exclude = ["contract.wasm", "hash.txt"]

[lib]
crate-type = ["cdylib", "rlib"]

[[example]]
name = "schema"
required-features = ["schema"]

[features]
default = ["export"]
export = []
interface = ["export", "dep:abstract-interface", "dep:cw-orch"]
schema = ["abstract-app/schema"]

[dependencies]
cosmwasm-std = { version = "1.2" }
cosmwasm-schema = { version = "1.2" }
cw2 = { version = "1.0.1" }
cw20 = { version = "0.16.0" }

cw-controllers = { version = "1.0.1" }
cw-storage-plus = "1.1.0"
thiserror = { version = "1.0" }
schemars = "0.8"
cw-asset = { version = "3.0" }

abstract-core = { version = "0.16.1" }
abstract-app = { version = "0.16.1" }
abstract-sdk = { version = "0.16.1" }

# Dependencies for interface
abstract-interface = { version = "0.16.1", optional = true }
cw-orch = { version = "0.13.0", optional = true }

# Croncat dependencies
croncat-sdk-factory = "1.0.3"
croncat-sdk-tasks = "1.0.3"
croncat-sdk-manager = "1.0.3"
croncat-integration-utils = "1.1.0"
# TODO: avoid using contract dep
croncat-factory = { version = "1.0.3", features = ["library"] }
croncat-manager = { version = "1.0.3", features = ["library"] }

[dev-dependencies]
croncat-app = { path = ".", features = ["interface"] }
abstract-interface = { version = "0.16.1", features = ["daemon"] }
abstract-testing = { version = "0.16.1" }
abstract-sdk = { version = "0.16.1", features = ["test-utils"] }
speculoos = "0.11.0"
semver = "1.0"
dotenv = "0.15.0"
env_logger = "0.10.0"
cw-orch = { version = "0.13.0", features = ["daemon"] }
cw-multi-test = "0.16.4"

# Croncat intefraces
croncat-sdk-agents = "1.0.3"
# Croncat contracts
croncat-factory = "1.0.3"
croncat-tasks = "1.0.3"
croncat-manager = "1.0.3"
croncat-agents = "1.0.3"
croncat-integration-testing = "1.1.0"

# Testing cw20
cw20-base = "0.16.0"
