[package]
name = "app"
version = "0.0.1"
authors = [
  "CyberHoward <cyberhoward@protonmail.com>",
  "Adair <adair@abstract.money>",
  "Abstract Money <contact@abstract.money>",
]
edition = "2021"
homepage = ""
documentation = ""
repository = ""
license = "GPL-3.0-or-later"
keywords = ["cosmos", "cosmwasm", "abstractsdk"]
resolver = "2"

exclude = ["contract.wasm", "hash.txt"]

[lib]
crate-type = ["cdylib", "rlib"]

[[example]]
name = "schema"
required-features = ["schema"]

[features]
default = ["export"]
export = []
# enable node-backed tests (ensure Docker is running)
# run with `cargo test --jobs 1 --features node-tests`
node-tests = ["interface"]
interface = ["export", "abstract-app/interface-macro", "dep:cw-orch"]
schema = ["abstract-app/schema"]

[dependencies]
cosmwasm-std = { version = "1.2" }
cosmwasm-schema = { version = "1.2" }
cw-controllers = { version = "1.0.1" }
cw-storage-plus = "1.1.0"
thiserror = { version = "1.0.50" }
schemars = "0.8"
cw-asset = { version = "3.0" }

abstract-app = { path = "../framework/packages/abstract-app" }

# Dependencies for interface
cw-orch = { version = "0.19.1", optional = true }

[dev-dependencies]
app = { path = ".", features = ["interface"] }
abstract-client = { path = "../framework/packages/abstract-client" }
abstract-app = { path = "../framework/packages/abstract-app", features = ["test-utils"] }
speculoos = "0.11.0"
semver = "1.0"
dotenv = "0.15.0"
env_logger = "0.10.0"
cw-orch = { version = "0.19.1", features = ["daemon"] }
clap = { version = "4.3.7", features = ["derive"] }
