[workspace]
members = [
  "contracts/apps/*",
  "contracts/adapters/*",
  "packages/bundles/wyndex",
]

# Enable the version 2 feature resolver, which avoids unifying features for targets that are not being built
#
# Critically this prevents dev-dependencies from enabling features even when not building a target that
# uses dev-dependencies, e.g. the library crate. This in turn ensures that we can catch invalid feature
# flag combinations that would otherwise only surface in dependent crates
#
# Reference - https://doc.rust-lang.org/nightly/cargo/reference/features.html#feature-resolver-version-2
# See - https://github.com/apache/arrow-rs/pull/1822/files
resolver = "2"

[workspace.package]
version = "0.17.0"
authors = [
  "CyberHoward <cyberhoward@protonmail.com>",
  "Riada <riada@abstract.money>",
  "Abstract Money <contact@abstract.money>",
]
edition = "2021"
homepage = "https://abstract.money"
documentation = "https://docs.abstract.money/"
repository = "https://github.com/AbstractSDK/contracts"
license = "GPL-3.0-or-later"
keywords = ["cosmos", "cosmwasm", "framework"]

[workspace.dependencies]
cosmwasm-std = { version = "1.2" }
cosmwasm-schema = { version = "1.2" }
cw-controllers = { version = "1.0" }
cw-utils = { version = "1.0" }
cw-storage-plus = "~1.1"
cw2 = { version = "1.0" }
cw20-base = { package = "abstract-cw20-base", version = "1.0.1", features = [
  "library",
] }
cw20 = { package = "abstract-cw20", version = "1.0.1" }

cw-asset = { version = "3.0" }
cw-ownable = { version = "0.5" }
cw-address-like = { version = "1.0" }

schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = { version = "1.0" }
protobuf = { version = "2", features = ["with-bytes"] }

clap = { version = "4.0.32", features = ["derive"] }
semver = "1.0"
cw-semver = { version = "1.0" }
cw-orch = { version = "~0.13" }
tokio = { version = "1.4", features = ["full"] }

## crates in order of publishing ## see docs/Publishing.md

abstract-interface = { version = "0.17.0" }
abstract-adapter = { version = "0.17.0" }
abstract-app = { version = "0.17.0" }
abstract-sdk = { version = "0.17.0" }
abstract-testing = { version = "0.17.0" }
abstract-core = { version = "0.17.0" }
abstract-macros = { version = "0.17.0" }
abstract-ica = { version = "0.17.0" }

abstract-dex-adapter = { path = "./contracts/adapters/dex" }
abstract-adapter-utils = { path = "../framework/packages/utils" }
abstract-dex-adapter-traits = { path = "../framework/packages/dex" }
abstract-staking-adapter-traits = { path = "../framework/packages/staking" }

# Juno dexes #
abstract-wyndex-adapter = { path = "../integrations/wyndex/packages/wyndex-adapter", default-features = false }
# Osmosis #
abstract-osmosis-adapter = { path = "../integrations/osmosis/packages/abstract-adapter", default-features = false }
# Terra #
abstract-astroport-adapter = { path = "../integrations/astroport/packages/abstract-adapter", default-features = false }
croncat-app = { path = "./contracts/apps/croncat" }
wyndex-bundle = { path = "./packages/bundles/wyndex" }

## Testing
cw-multi-test = { version = "0.16.2" }
rstest = "0.17.0"
speculoos = "0.11.0"
anyhow = "1"

# this ensures local compatability when compiling locally
[patch.crates-io]
abstract-adapter = { path = "../framework/packages/abstract-adapter" }
abstract-app = { path = "../framework/packages/abstract-app" }
abstract-interface = { path = "../framework/packages/abstract-interface" }
abstract-sdk = { path = "../framework/packages/abstract-sdk" }
abstract-testing = { path = "../framework/packages/abstract-testing" }
abstract-core = { path = "../framework/packages/abstract-core" }
abstract-macros = { path = "../framework/packages/abstract-macros" }
abstract-ica = { path = "../framework/packages/abstract-ica" }

# Backup release profile, will result in warnings during optimization
[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
