[workspace]
members = [
  "astroport-adapter",
  "astrovault-adapter",
  "bundles/*",
  "osmosis-adapter",
  "wyndex-adapter",
  "kujira-adapter",
  "mars-adapter",
  "cavern-adapter",
]

resolver = "2"

[workspace.package]
version = "0.21.0"
authors = [
  "CyberHoward <cyberhoward@protonmail.com>",
  "Riada <riada@abstract.money>",
  "Abstract Money <contact@abstract.money>",
]
edition = "2021"
homepage = "https://abstract.money"
documentation = "https://docs.abstract.money/"
repository = "https://github.com/AbstractSDK/abstract"
license = "GPL-3.0-or-later"
keywords = ["cosmos", "cosmwasm", "framework"]

[workspace.dependencies]
cosmwasm-std = { version = "1.2" }
cosmwasm-schema = { version = "1.2" }
cw-storage-plus = "1.2.0"
cw2 = "1.1.2"
cw-plus-interface = { package = "abstract-cw-plus-interface", version = "2.0.0" }
cw20 = { package = "abstract-cw20", version = "2.0.0" }
cw20-base = { package = "abstract-cw20-base", version = "2.0.0" }
cw-utils = "1.0"
cw-controllers = "1.1"
cw-ownable = { version = "0.5" }
cw-address-like = { version = "1.0" }
cw-asset = { version = "3.0" }
cw-semver = { version = "1.0" }
cw-orch = { version = "0.22.0" }

anyhow = "1.0"

schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.50" }
protobuf = { version = "2", features = ["with-bytes"] }
chrono = { version = "0.4.31", default-features = false }
clap = { version = "4.0.32", features = ["derive"] }
semver = "1.0"

## crates in order of publishing ## see docs/Publishing.md

abstract-interface = { version = "0.21.0" }
abstract-adapter = { version = "0.21.0" }
abstract-sdk = { version = "0.21.0" }
abstract-std = { version = "0.21.0" }

abstract-adapter-utils = { version = "0.21.0" }
abstract-dex-standard = { version = "0.21.0" }
# abstract-money-market-standard = { version = "0.21.0" }
abstract-money-market-standard = { path = "../framework/packages/standards/money-market" }
abstract-staking-standard = { version = "0.21.0" }

# TODO: REMOVE As soon as new dex-standard published
[patch.crates-io]
abstract-adapter = { path = "../framework/packages/abstract-adapter" }
abstract-interface = { path = "../framework/packages/abstract-interface" }
abstract-sdk = { path = "../framework/packages/abstract-sdk" }
abstract-std = { path = "../framework/packages/abstract-std" }
abstract-macros = { path = "../framework/packages/abstract-macros" }
abstract-adapter-utils = { path = "../framework/packages/standards/utils" }
abstract-dex-standard = { path = "../framework/packages/standards/dex" }
abstract-staking-standard = { path = "../framework/packages/standards/staking" }
abstract-money-market-standard = { path = "../framework/packages/standards/money-market" }

# Backup release profile, will result in warnings during optimization
[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
